# algtype

./: Cargo.toml
algtype/: Cargo.toml  README.md
algtype/src/: generic.rs  impls.rs  lib.rs  utils.rs
algtype/tests/: test.rs
algtype_derive/: Cargo.toml
algtype_derive/src/: lib.rs
count_enum/: Cargo.toml  README.md
count_enum/src/: generic.rs  impls.rs  iter.rs  lib.rs
count_enum/tests/: test.rs
power_map/: Cargo.toml  README.md
power_map/src/: generic.rs  lib.rs  totalmap.rs  traits.rs
power_map/tests/: test.rs
