[package]
name = "algtype_derive"
version = "0.1.0"
description = "Macros for algtype"
keywords = ["generic"]
categories = ["no-std", "rust-patterns", "development-tools::procedural-macro-helpers"]
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = "2.0.*"
