[package]
name = "count_enum"
version = "0.1.0"
description = "Enum trait for finite types, e.g., conversion with usize, iteration on values"
keywords = ["enum"]
categories = ["no-std", "rust-patterns"]
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
algtype = "0.1.0"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
